--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/cli": "^6.1.1",
+    "@capacitor/core": "^6.1.1",
     "@iconify-json/carbon": "^1.1.36",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.4",
@@ -18,6 +21,7 @@
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
+    "daisyui": "^4.12.10",
     "tailwindcss": "^3.4.6"
   }
 }
