add capacitor oauth generic plugin and rename app protein->companion

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.swifty_protein",
-  "appName": "swifty-protein",
+  "appId": "com.swifty_companion",
+  "appName": "swifty-companion",
   "webDir": ".output/public"
 }
