--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.swifty_protein"
+    namespace "com.swifty_companion"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.swifty_protein"
+        applicationId "com.swifty_companion"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
