--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@capacitor-community/generic-oauth2": "^6.0.0",
     "@capacitor/android": "^6.1.1",
     "@capacitor/cli": "^6.1.1",
     "@capacitor/core": "^6.1.1",
