--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
   "appId": "com.swifty_companion",
-  "appName": "swifty_companion",
+  "appName": "swifty-companion",
   "webDir": ".output/public"
 }
