try to use capacitor http plugin for native cors

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,10 @@
 {
   "appId": "com.swifty_companion",
   "appName": "swifty-companion",
-  "webDir": ".output/public"
+  "webDir": ".output/public",
+  "plugins": {
+    "CapacitorHttp": {
+      "enabled": true
+    }
+  }
 }
